temporal media and media entity
